GitOps/clusters/cyberhawk-talos-k8s/3-apps/.portfolio/09-networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: portfolio-api
  namespace: portfolio
spec:
  endpointSelector:
    matchLabels:
      app: portfolio-api
  ingress:
    - fromEntities:
        - host
        - remote-node
        - ingress
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
  egress:
    - toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toPorts:
        - ports:
            - port: "53"
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: portfolio-web
  namespace: portfolio
spec:
  endpointSelector:
    matchLabels:
      app: portfolio-web
  ingress:
    - fromEntities:
        - host
        - remote-node
        - ingress
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: price-fetcher
  namespace: portfolio
spec:
  endpointSelector:
    matchLabels:
      app: price-fetcher
  ingress: []
  egress:
    - toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "53"
              protocol: UDP
